<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_directions"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_message"
                android:hint="@string/hint_message"
                android:inputType="textCapSentences|textMultiLine"/>

            <ImageView
                android:id="@+id/image"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="300dp"
                android:adjustViewBounds="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/description_user_image"/>

            <Button
                android:id="@+id/button_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corner"
            android:text="@string/button_next" />

    </LinearLayout>

</ScrollView>