<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:autofillHints="@string/hint_phone"
                android:inputType="textAutoComplete|phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_time"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/picker_time"
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_date"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/picker_date"
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_timezone"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_timezone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_send" />

    </LinearLayout>

</ScrollView>